<resources>
    <string name="app_name">Fallas Viales</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- String para formulario activity-->
    <string name="ubicacion">Ubicación</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="tipo">Tipo de Irregularidad</string>
    <string name="email">Correo electrónico</string>
    <string name="enviar">Enviar</string>
    <string name="msjCampos">Campo/s Obligatorios</string>
    <string name="msjErrorEmail">Formato de correo invalido,Ejm example@gmail.com</string>
    <string name="msjResExitoso">Registro Exitoso</string>
    <string name="seleccion">Seleccione</string>
    <string name="msjResNoExitoso">Error al guardar registro,inténtalo mas tarde</string>
    <string name="msjFoto">Debe tomar una foto para completar el registro.</string>
    <string name="tomarFoto">Tomar Foto</string>
    <string name="campoObligatorio">Campo Obligatorio.</string>
    <string name="msjSeleccionarTexto">Debe Ingresar un texto.</string>
    <string name="msjTipo">Debe seleccionar un tipo de Irregularidad.</string>
    <string name="msjSplass">Su dispositivo no esta conectado a internet.</string>
    <string name="nombreInvalido">Nombre inválido</string>
    <string name="quienesSomos">Quienes somos</string>
    <string name="msjQuienesSomos">La app Fallas Viales es la apuesta personal de un grupo  programadores  que trabajan de forma integral y que mediante procesos sinérgicos buscan lograr resultados sobresalientes.
Somos especialistas en el desarrollo de aplicaciones móviles para las plataforma de Android. Construimos aplicaciones en el lenguaje nativo  ya que consideramos que es la mejor manera de que estas aplicaciones aprovechen el 100% de las capacidades de los dispositivos.
   </string>


</resources>
